# Tekisasu-Graphics

./: .gitignore  CMakeLists.txt  README.md  TX-INSTALL.md  txbuild_mac.bash
data/: pref.xml
data/extensions/aseprite-theme/: package.json  theme.xml
data/extensions/aseprite-theme/dark/: theme.xml
data/extensions/tekisasu-theme/: package.json  theme.xml
data/widgets/: about.xml  canvas_size.xml  cel_properties.xml  color_mode.xml  export_file.xml  home_view.xml  keyboard_shortcuts.xml  layer_properties.xml  new_sprite.xml  options.xml  palette_popup.xml  sprite_properties.xml  timeline_conf.xml
laf/: .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md
laf/.github/: PULL_REQUEST_TEMPLATE.md
laf/.github/workflows/: build.yml  lint_commit.yml
laf/base/: 24bits.h  CMakeLists.txt  README.md  base.h  base64.cpp  base64.h  base64_tests.cpp  bind.h  buffer.h  cfile.cpp  cfile.h  chrono.cpp  chrono.h  chrono_unix.h  chrono_win32.h  clamp.h  concurrent_queue.h  config.h.cmakein  convert_to.cpp  convert_to.h  count_bits.h  count_bits_tests.cpp  debug.cpp  debug.h  debug_tests.cpp  disable_copying.h  dll.cpp  dll.h  dll_unix.h  dll_win32.h  enum_flags.h  enum_flags_tests.cpp  errno_string.cpp  errno_string.h  exception.cpp  exception.h  file_content.cpp  file_content.h  file_content_tests.cpp  file_handle.cpp  (+97 more)
laf/base/win/: comptr.h  registry.cpp  registry.h  registry_tests.cpp  ver_query_values.cpp  ver_query_values.h  win32_exception.cpp  win32_exception.h
laf/cmake/: FindHarfBuzz.cmake  FindPixman.cmake  FindSkia.cmake  LafFindTests.cmake
laf/docs/: README.md  backend.md
laf/docs/base/: README.md
laf/docs/ft/: README.md
laf/docs/gfx/: README.md
laf/docs/os/: README.md
laf/examples/: CMakeLists.txt  allevents.cpp  base64.cpp  complextextlayout.cpp  custom_window.cpp  drag_and_drop.cpp  floating_window.cpp  hello_laf.cpp  helloworld.cpp  listfonts.cpp  listscreens.cpp  multiple_windows.cpp  panviewport.cpp  shader.cpp  show_platform.cpp
laf/ft/: CMakeLists.txt  algorithm.h  face.h  freetype_headers.h  hb_face.h  hb_shaper.h  lib.cpp  lib.h  stream.cpp  stream.h
laf/gfx/: CMakeLists.txt  border.h  border_io.h  clip.h  clip_tests.cpp  color.h  color_space.cpp  color_space.h  fwd.h  hsl.cpp  hsl.h  hsl_tests.cpp  hsv.cpp  hsv.h  hsv_tests.cpp  matrix.h  matrix_none.h  matrix_skia.h  packing_rects.cpp  packing_rects.h  packing_rects_tests.cpp  path.h  path_none.h  path_skia.h  point.h  point_io.h  rect.h  rect_io.h  rect_tests.cpp  region.h  region_pixman.cpp  region_pixman.h  region_skia.cpp  region_skia.h  region_tests.cpp  region_win.cpp  region_win.h  rgb.cpp  rgb.h  rgb_tests.cpp  (+2 more)
laf/os/: CMakeLists.txt  LICENSE.txt  README.md  app_main_tests.cpp  app_mode.h  capabilities.h  color_space.h  cursor.h  display.cpp  display.h  dnd.cpp  dnd.h  draw_text.cpp  draw_text.h  event.h  event_queue.h  font.h  font_manager.h  font_style.h  font_style_set.h  menus.h  native_cursor.h  native_dialogs.h  os.h  paint.h  ref.h  sampling.h  scoped_handle.h  screen.h  surface.h  surface_format.h  surface_list.h  system.cpp  system.h  tablet_options.h  typeface.h  window.cpp  window.h  window_spec.h
laf/os/common/: event_queue.cpp  event_queue_with_resize_display.h  file_dialog.h  freetype_font.cpp  freetype_font.h  generic_surface.h  main.cpp  sprite_sheet_font.h  system.cpp  system.h
laf/os/gl/: gl_context.h  gl_context_glx.h  gl_context_nsgl.h  gl_context_nsgl.mm  gl_context_wgl.h
laf/os/gtk/: native_dialogs.cpp  native_dialogs.h
laf/os/none/: os.cpp  paint.h
laf/os/osx/: app.h  app.mm  app_delegate.h  app_delegate.mm  color_space.h  color_space.mm  dnd.h  dnd.mm  event_queue.h  event_queue.mm  generate_drop_files.h  keys.mm  logger.h  logger.mm  menus.h  menus.mm  native_dialogs.h  native_dialogs.mm  screen.h  system.h  system.mm  view.h  view.mm  window.h  window.mm  window_delegate.h
laf/os/skia/: os.cpp  paint.h  resize_surface.cpp  resize_surface.h  skia_color_space.cpp  skia_color_space.h  skia_display.cpp  skia_display.h  skia_draw_text.cpp  skia_draw_text_with_shaper.cpp  skia_font_manager.h  skia_gl.cpp  skia_gl.h  skia_helpers.h  skia_surface.cpp  skia_surface.h  skia_system.h  skia_window.cpp  skia_window.h  skia_window_base.h  skia_window_osx.h  skia_window_osx.mm  skia_window_win.cpp  skia_window_win.h  skia_window_x11.cpp  skia_window_x11.h
laf/os/win/: color_space.cpp  color_space.h  dnd.cpp  dnd.h  event_queue.cpp  event_queue.h  keys.h  native_dialogs.cpp  native_dialogs.h  screen.h  system.cpp  system.h  winapi.cpp  winapi.h  window.cpp  window.h  window_dde.cpp  wintab.cpp  wintab.h
laf/os/x11/: cursor.h  event_queue.cpp  event_queue.h  keys.cpp  keys.h  mouse.h  native_dialogs.cpp  native_dialogs.h  screen.h  system.cpp  system.h  window.cpp  window.h  x11.cpp  x11.h  xinput.cpp  xinput.h
macOS-tools/: getAppBundleFromTrial.bash
macOS-tools/bundle/Tekisasu-Graphics.app/Contents/: Info.plist
macOS-tools/bundle/Tekisasu-Graphics.app/Contents/Resources/: Tekisasu-Graphics.icns
macOS-tools/bundle/Tekisasu-Graphics.app/Contents/Resources/data/: pref.xml
macOS-tools/bundle/Tekisasu-Graphics.app/Contents/Resources/data/extensions/aseprite-theme/: theme.xml
macOS-tools/bundle/Tekisasu-Graphics.app/Contents/Resources/data/widgets/: about.xml  export_file.xml  file_selector.xml  options.xml  sprite_properties.xml
src/: README.md
src/app/: CMakeLists.txt  extensions.cpp  file_selector.cpp  file_selector.h  find_widget.h  flatten.cpp  flatten.h  load_widget.h  resource_finder.cpp  widget_loader.cpp  widget_loader.h  widget_not_found.h  widget_type_mismatch.h
src/app/file/: webp_options.h
src/app/ui/: status_bar.cpp
src/app/util/: range_utils.h
src/desktop/linux/: aseprite.desktop
src/desktop/linux/kde/: asepritethumbnail.desktop
src/desktop/win/: class_factory.h  dllmain.cpp  thumbnail_handler.cpp
src/doc/: handle_anidir.h  pixel_format.h
src/doc/algorithm/: flip_image.cpp
src/main/: resources_win32.rc
src/psd/: psd.cpp
src/ver/: CMakeLists.txt  info.c
